<resources>
    <string name="app_name">base_widget</string>

    <string name="tvHello">Hello!</string>
    <string name="tvContentHello">Have a good day</string>
    <string name="tvTitleDialog">Add to the waiting screen.</string>
    <string name="tvShop">Shop</string>
    <string name="tvAllPlant">All Plant</string>
    <string name="tvRename">Rename</string>
    <string name="tvDelete">Delete</string>
    <string name="tvAllPet">All Pet</string>
    <string name="tvAnimal">Pets</string>
    <string name="tvPlant">Plant</string>
    <string name="tvRose">Rose</string>
    <string name="tvSunflower">Sunflower</string>
    <string name="tvPeachBlossom">PeachBlossom</string>
    <string name="tvSeed">Seed</string>
    <string name="tvEggs">Eggs</string>
    <string name="tvCat">Cat</string>
    <string name="tvDog">Dog</string>
    <string name="tvRabbit">Rabbit</string>
    <string name="tvPet">Pet</string>
    <string name="tvSproutIn">Sprout in</string>
    <string name="tvExp">+ %d exp</string>
    <string name="tvToastLvMax">Level Max</string>


    <string name="tvLevel1">Lv.1</string>
    <string name="tvLevel2">Lv.2</string>
    <string name="tvLevel3">Lv.3</string>
    <string name="tvLevel4">Lv.4</string>
    <string name="tvLevelMax">Lv.Max</string>

    <string name="ct_plant_1">Water the tree</string>
    <string name="ct_plant_2">Prune</string>
    <string name="ct_plant_3">Sun</string>
    <string name="ct_plant_4">Fertilize</string>

    <string name="ct_pet_1">Eat</string>
    <string name="ct_pet_2">Take a shower</string>
    <string name="ct_pet_3">WC</string>
    <string name="ct_pet_4">Sleep</string>

    <string name="tvPhoto">Photo</string>
    <string name="tvMyGarden">My Garden</string>
    <string name="tvNewWidget">New widget</string>
    <string name="tvGet">Get</string>
    <string name="tvTitleAddWidget">Select a seed or a plant</string>
    <string name="tvContentAddWidget">Seed/Plant not select</string>
    <string name="tvSelect">Select</string>
    <string name="tvPlantName">Plant Name</string>
    <string name="tvAddWidget">Add Widget</string>
    <string name="tvWidget">Widget:</string>

    <string name="tv2x2" translatable="false">2x2</string>
    <string name="tv4x2" translatable="false">4x2</string>
    <string name="tv4x3" translatable="false">4x3</string>

    <string name="change_name">Change name</string>
    <string name="congratulation">Congratulation</string>
    <string name="congratulation_content">This feature requires an internet \n connection. Please check your \n    connection again!</string>

    <string name="languages">Languages</string>
    <string name="setting">Setting</string>
    <string name="share_app">Share App</string>
    <string name="rate">Rate</string>
    <string name="privacy">Privacy policy</string>
    <string name="we_are_working_hard_for_a_better_user_experience">We are working hard for a better user experience.</string>
    <string name="we_d_greatly_appreciate_if_you_can_rate_us">We\’d greatly appreciate if you can rate us.</string>
    <string name="the_best_we_can_get">The best we can get :)</string>
    <string name="writing_something">writing something…</string>
    <string name="may_be_later">Maybe later</string>
    <string name="send">Send</string>
    <string name="oh_no">Oh, no!</string>
    <string name="please_leave_us_some_feedback">Please leave us some feedback</string>
    <string name="we_like_you_too">We like you too!</string>
    <string name="thank_for_your_feedback">Thank for your feedback.</string>
    <string name="we_are_working">We are working hard for a better user experience.</string>
    <string name="we_greatly_appreciate">We\’d greatly appreciate if you can rate us .</string>
    <string name="please_feedback">Please feedback</string>
    <string name="rate_thanks">Thanks for your rating</string>
    <string name="share_to">Share to</string>
    <string name="no_result_data">No result data</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="got_it">Got it</string>
    <string name="rename">Rename</string>

</resources>